--- a/ProfissionaisDisponiveis.html
+++ b/ProfissionaisDisponiveis.html
@@ -27,6 +27,7 @@
     </div>
 </header>
 
+  <!-- MAIN -->
   <main class="container">
     <aside class="filtros">
       <div class="filtro-box">
@@ -57,6 +58,7 @@
       <h2>Profissionais Disponíveis</h2>
       <div class="cards">
         
+        <!-- Card 1 -->
         <section class="card">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Lucas Castro">
           <h4>Lucas Castro</h4>
@@ -66,6 +68,7 @@
           </div>
         </section>
 
+        <!-- Card 2 -->
         <section class="card">
           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Ana Borges">
           <h4>Ana Borges</h4>
@@ -75,6 +78,7 @@
           </div>
         </section>
 
+        <!-- Card 3 -->
         <section class="card">
           <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
           <h4>Beatriz Borges</h4>
@@ -88,6 +92,7 @@
     </section>
   </main>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
