--- a/tela_menu_principal.html
+++ b/tela_menu_principal.html
@@ -30,7 +30,7 @@
     <h4>Clinicas Disponiveis</h4>
     <div class="button_options">
         <div class="options ">
-            <img class="imagem_clinica" src="/PI-Tec. Desen. Sistemas/Clinica Sorriso.png" alt="">
+            <img class="imagem_clinica" src="OdontoIMG/Clinica Sorriso.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorriso Vivo Odontologia</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="options">
-            <img class="imagem_clinica" src="/PI-Tec. Desen. Sistemas/Clinica Odonto.png" alt="">
+            <img class="imagem_clinica" src="OdontoIMG/Clinica Odonto.png" alt="">
             <div>
             <h4 class="estilo">Clinica Dental Prime</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="options">
-            <img class="imagem_clinica" src="/PI-Tec. Desen. Sistemas/Clinica Mais Saúde.png" alt="">
+            <img class="imagem_clinica" src="OdontoIMG/Clinica Mais Saúde.png" alt="">
             <div>
             <h4 class="estilo">Odonto Mais Saúde</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="options">
-            <img class="imagem_clinica" src="/PI-Tec. Desen. Sistemas/Clinica Sorrir Bem.png" alt="">
+            <img class="imagem_clinica" src="OdontoIMG/Clinica Sorrir Bem.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorrir Bem</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="options">
-            <img class="imagem_clinica" src="/PI-Tec. Desen. Sistemas/Clinica Orto.png" alt="">
+            <img class="imagem_clinica" src="OdontoIMG/Clinica Orto.png" alt="">
             <div>
             <h4>Orto & Estética</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -83,7 +83,7 @@
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
-        <img src="/PI-Tec. Desen. Sistemas/Web/logo2.png" alt="OdontoPro Logo" class="logo">
+        <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
       </div>
       <div class="footer-text">
         <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
