--- a/Tela_configurações.html
+++ b/Tela_configurações.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header OdontoPro</title>
-    <link rel="stylesheet" href="Tela_confihurações.css">
+    <link rel="stylesheet" href="Tela_configurações.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
