--- a/ProfissionaisDisponiveis.html
+++ b/ProfissionaisDisponiveis.html
@@ -59,7 +59,7 @@
       <div class="cards">
         
         <!-- Card 1 -->
-        <section class="card" onclick="location.href='PerfilDoProfissional.html'">
+        <section class="card">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Lucas Castro">
           <h4>Lucas Castro</h4>
           <p>Implantodontista</p>
@@ -69,7 +69,7 @@
         </section>
 
         <!-- Card 2 -->
-        <section class="card" onclick="location.href='PerfilDoProfissional.html'">
+        <section class="card">
           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Ana Borges">
           <h4>Ana Borges</h4>
           <p>Ortodontista</p>
@@ -79,7 +79,7 @@
         </section>
 
         <!-- Card 3 -->
-        <section class="card" onclick="location.href='PerfilDoProfissional.html'">
+        <section class="card">
           <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
           <h4>Beatriz Borges</h4>
           <p>Clínico Geral</p>
