--- a/Tela_verificar_codigo.html
+++ b/Tela_verificar_codigo.html
@@ -10,7 +10,7 @@
   <main class="main">
     <div class="container">
       <div class="Logo">
-        <img class="img_logo" src="OdontoIMG/OdontoLogo1.png" alt="Logo" />
+        <img class="img_logo" src="Logo moderna cirurgiã dentista azul (2) 1.png" alt="Logo" />
       </div>
 
       <div class="Texto_inicial">
