--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/reset.css">
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="src/responsivo.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsivo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -17,12 +17,12 @@
 <body>
     <div class="container">
         <div class="pacienteimg">
-            <img src="src/image/Rectangle 2764.png" alt="Imagem OdontoPro">
+            <img src="OdontoIMG/Rectangle 2764.png" alt="Imagem OdontoPro">
         </div>
         
         <div class="login">
             <div class="logomarca">
-                <img src="src/image/Logo + icon.png" alt="OdontoPro">
+                <img src="OdontoIMG/Logo + icon.png" alt="OdontoPro">
             </div>
 
             <h1>Faça login com sua Conta</h1>
