--- a/perfil.html
+++ b/perfil.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clínica Sorriso Vivo Odontologia</title>
-  <link rel="stylesheet" href="src/reset.css">
-  <link rel="stylesheet" href="src/perfil.css">
-  <link rel="stylesheet" href="src/responsivo.css">
-  <link rel="stylesheet" href="src/header.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="perfil.css">
+  <link rel="stylesheet" href="responsivo.css">
+  <link rel="stylesheet" href="header.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
    <header class="top-header">
         <div class="logo-area">
-            <img src="src/img/Logo odontopro.png" alt="OdontoPro Logo" class="logo">
+            <img src="OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo">
         </div>
 
         <div class="search-area">
@@ -33,7 +33,7 @@
     
     <!-- Topo -->
     <div class="top-section">
-      <img src="src/img/Group 333.png" alt="Clínica Sorriso Vivo" class="clinic-img">
+      <img src="OdontoIMG/Group 333.png" alt="Clínica Sorriso Vivo" class="clinic-img">
 
       <div class="clinic-info">
         <h1>Clínica Sorriso Vivo Odontologia</h1>
@@ -109,7 +109,7 @@
   <footer class="footer">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="src/img/Logo odontopro.png" alt="OdontoPro Logo" class="logo">
+            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
           </div>
           <div class="footer-text">
             <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
