update de telas funcionais

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
             <form>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Senha" required>
-                <button class="acessar-conta" type="submit">Acessar na conta</button>
+                <button class="acessar-conta" type="submit" onclick="location.href='tela_menu_principal.html'">Acessar na conta</button>
             </form>
 
             <div class="esqueci-senha">
