--- a/perfil.html
+++ b/perfil.html
@@ -71,7 +71,7 @@
           </div>
         </div>
 
-        <button class="btn">Escolher Profissional</button>
+        <button class="btn" onclick="location.href='ProfissionaisDisponiveis.html'">Escolher Profissional</button>
       </div>
     </div>
 
