--- a/tela_menu_principal.html
+++ b/tela_menu_principal.html
@@ -29,7 +29,7 @@
     <h2>Em busca de uma clinica?</h2>
     <h4>Clinicas Disponiveis</h4>
     <div class="button_options">
-        <div class="options ">
+        <div class="options " onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="OdontoIMG/Clinica Sorriso.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorriso Vivo Odontologia</h3>
@@ -38,7 +38,7 @@
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
             </div>
         </div>
-        <div class="options">
+        <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="OdontoIMG/Clinica Odonto.png" alt="">
             <div>
             <h4 class="estilo">Clinica Dental Prime</h3>
@@ -47,7 +47,7 @@
             <h6><b>Horários Disponiveis:</b> 08:00h | 09:00h | 11:00h</h6>
             </div>
         </div>
-        <div class="options">
+        <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="OdontoIMG/Clinica Mais Saúde.png" alt="">
             <div>
             <h4 class="estilo">Odonto Mais Saúde</h3>
@@ -56,7 +56,7 @@
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
             </div>
         </div>
-        <div class="options">
+        <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="OdontoIMG/Clinica Sorrir Bem.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorrir Bem</h3>
@@ -65,7 +65,7 @@
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
             </div>
         </div>
-        <div class="options">
+        <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="OdontoIMG/Clinica Orto.png" alt="">
             <div>
             <h4>Orto & Estética</h3>
