--- a/Header.html
+++ b/Header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header OdontoPro</title>
-    <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="Basico.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
