--- a/ProfissionaisDisponiveis.html
+++ b/ProfissionaisDisponiveis.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ProfissionaisDisponiveis.css">
+    <link rel="stylesheet" href="Basico.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>OdontoPro | Profissionais Disponiveis </title>
 </head>
@@ -79,6 +80,89 @@
         </section>
 
         <!-- Card 3 -->
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+        
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
+        <section class="card" onclick="location.href='pagina1.html'">
+          <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
+          <h4>Beatriz Borges</h4>
+          <p>Clínico Geral</p>
+          <div class="avaliacao">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+          </div>
+        </section>
+
         <section class="card" onclick="location.href='pagina1.html'">
           <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Beatriz Borges">
           <h4>Beatriz Borges</h4>
