--- a/Perfil/perfil.html
+++ b/Perfil/perfil.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="perfil.css">
   <link rel="stylesheet" href="responsivo.css">
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="../Principal/Basico.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
