--- a/PerfilDoProfissional/PerfilDoProfissional.html
+++ b/PerfilDoProfissional/PerfilDoProfissional.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Perfil do Profissional</title>
-  <link rel="stylesheet" href="Basico.css">
+  <link rel="stylesheet" href="../Principal/Basico.css">
   <link rel="stylesheet" href="PerfilDoProfissional.css" />
   <link
     rel="stylesheet"
