--- a/Configuracoes/Tela_configurações.html
+++ b/Configuracoes/Tela_configurações.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header OdontoPro</title>
+    <link rel="stylesheet" href="../Principal/Basico.css">
     <link rel="stylesheet" href="Tela_configurações.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +15,7 @@
 <body>
     <header class="top-header">
         <div class="logo-area">
-            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
         </div>
 
         <div class="search-area">
