Ajuste de imagens

--- a/MenuPrincipal/tela_menu_principal.html
+++ b/MenuPrincipal/tela_menu_principal.html
@@ -12,7 +12,7 @@
 
 <body>
 <header>
-  <img src="/PI-Tec. Desen. Sistemas/Web/logo2.png" alt="OdontoPro Logo" class="logo">
+  <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
 
   <div class="search-area">
       <input type="text" placeholder="Pesquise aqui">
@@ -31,7 +31,7 @@
     <h4>Clinicas Disponiveis</h4>
     <div class="button_options">
         <div class="options " onclick="location.href='Perfil.html'">
-            <img class="imagem_clinica" src="OdontoIMG/Clinica Sorriso.png" alt="">
+            <img class="imagem_clinica" src="../OdontoIMG/Clinica Sorriso.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorriso Vivo Odontologia</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="options" onclick="location.href='Perfil.html'">
-            <img class="imagem_clinica" src="OdontoIMG/Clinica Odonto.png" alt="">
+            <img class="imagem_clinica" src="../OdontoIMG/Clinica Odonto.png" alt="">
             <div>
             <h4 class="estilo">Clinica Dental Prime</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="options" onclick="location.href='Perfil.html'">
-            <img class="imagem_clinica" src="OdontoIMG/Clinica Mais Saúde.png" alt="">
+            <img class="imagem_clinica" src="../OdontoIMG/Clinica Mais Saúde.png" alt="">
             <div>
             <h4 class="estilo">Odonto Mais Saúde</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="options" onclick="location.href='Perfil.html'">
-            <img class="imagem_clinica" src="OdontoIMG/Clinica Sorrir Bem.png" alt="">
+            <img class="imagem_clinica" src="../OdontoIMG/Clinica Sorrir Bem.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorrir Bem</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="options" onclick="location.href='Perfil.html'">
-            <img class="imagem_clinica" src="OdontoIMG/Clinica Orto.png" alt="">
+            <img class="imagem_clinica" src="../OdontoIMG/Clinica Orto.png" alt="">
             <div>
             <h4>Orto & Estética</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -84,7 +84,7 @@
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
-        <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+        <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
       </div>
       <div class="footer-text">
         <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
