--- a/Perfil/perfil.html
+++ b/Perfil/perfil.html
@@ -14,7 +14,7 @@
 
    <header class="top-header">
         <div class="logo-area">
-            <img src="OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo">
         </div>
 
         <div class="search-area">
@@ -33,7 +33,7 @@
     
     <!-- Topo -->
     <div class="top-section">
-      <img src="OdontoIMG/Group 333.png" alt="Clínica Sorriso Vivo" class="clinic-img">
+      <img src="../OdontoIMG/Group 333.png" alt="Clínica Sorriso Vivo" class="clinic-img">
 
       <div class="clinic-info">
         <h1>Clínica Sorriso Vivo Odontologia</h1>
@@ -109,7 +109,7 @@
   <footer class="footer">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
           </div>
           <div class="footer-text">
             <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
