--- a/PerfilDoProfissional/PerfilDoProfissional.html
+++ b/PerfilDoProfissional/PerfilDoProfissional.html
@@ -16,7 +16,7 @@
 
     <header class="top-header">
         <div class="logo-area">
-            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
         </div>
 
         <div class="search-area">
@@ -94,7 +94,7 @@
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
-        <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+        <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
       </div>
       <div class="footer-text">
         <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
