--- a/Principal/HeaderFooter.html
+++ b/Principal/HeaderFooter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header OdontoPro</title>
-    <link rel="stylesheet" href="Basico.css">
+    <link rel="stylesheet" href="../Basico.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     <footer class="footer">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
           </div>
           <div class="footer-text">
             <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
