--- a/MenuPrincipal/tela_menu_principal.html
+++ b/MenuPrincipal/tela_menu_principal.html
@@ -30,7 +30,7 @@
     <h2>Em busca de uma clinica?</h2>
     <h4>Clinicas Disponiveis</h4>
     <div class="button_options">
-        <div class="options " onclick="location.href='Perfil.html'">
+        <div class="options " onclick="location.href='../Perfil/perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Sorriso.png" alt="">
             <div>
             <h4 class="estilo">Clinica Sorriso Vivo Odontologia</h3>
