--- a/Principal/HeaderFooter.html
+++ b/Principal/HeaderFooter.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Header OdontoPro</title>
-    <link rel="stylesheet" href="../Basico.css">
+    <link rel="stylesheet" href="Basico.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header class="top-header">
         <div class="logo-area">
-            <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+            <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
         </div>
 
         <div class="search-area">
