--- a/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
+++ b/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
@@ -60,7 +60,7 @@
       <div class="cards">
         
         <!-- Card 1 -->
-        <section class="card" onclick="location.href='PerfilDoProfissional.html'">
+        <section class="card" onclick="location.href='../PerfilDoProfissional/PerfilDoProfissional.html'">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Lucas Castro">
           <h4>Lucas Castro</h4>
           <p>Implantodontista</p>
