--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         
         <div class="login">
             <div class="logomarca">
-                <img src="OdontoIMG/Logo + icon.png" alt="OdontoPro">
+                <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro">
             </div>
 
             <h1>Faça login com sua Conta</h1>
@@ -31,7 +31,7 @@
             <form>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Senha" required>
-                <button class="acessar-conta" type="submit" onclick="location.href='tela_menu_principal.html'">Acessar na conta</button>
+                <button class="acessar-conta" type="submit" onclick="location.href='MenuPrincipal/tela_menu_principal.html'">Acessar na conta</button>
             </form>
 
             <div class="esqueci-senha">
