--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 
 
             <div class="criar-conta">
-                <p>Ainda não tem uma conta ? <a href="#">Criar conta</a></p>
+                <p>Ainda não tem uma conta ? <a href="../CriarConta/CriarConta.html">Criar conta</a></p>
             </div>
         </div>
     </div>
