--- a/Configuracoes/Tela_configurações.html
+++ b/Configuracoes/Tela_configurações.html
@@ -124,7 +124,7 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
+                <img src="../OdontoIMG/OdontoLogo2.png" alt="OdontoPro Logo" class="logo">
             </div>
             <div class="footer-text">
                 <p>OdontoPro Brasil Serviços Online e Software Ltda</p>
