mudança criar conta

--- a/CriarConta/CriarConta.html
+++ b/CriarConta/CriarConta.html
@@ -12,7 +12,7 @@
     
     <main>
 
-        <img class="Logo" src="OdontoIMG/OdontoLogo1.png" alt="era pra ter uma imagem"/>
+        <img class="Logo" src="../OdontoIMG/OdontoLogo1.png" alt="era pra ter uma imagem"/>
         
         <h2> criar conta </h2>
         <br>
