paginas estilo parecido

--- a/RecuperacaoSenha/tela_recuperacao_senha.html
+++ b/RecuperacaoSenha/tela_recuperacao_senha.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Redefinição de Senha</title>
-    <link rel="stylesheet" href="/tela_recuperacao_senha.css">
+    <link rel="stylesheet" href="tela_recuperacao_senha.css">
 </head>
 <body>
     <div class="conteudo">
         <div class="imagem">
-            <!-- <img class="imagem" src="/logo1.png" alt="Logo OdontoPRO"> -->
+            <img class="imagem" src="../OdontoIMG/OdontoLogo1.png" alt="Logo OdontoPRO">
         </div>
         <h2>Esqueceu sua Senha?</h2>
         <p>Por favor, insira seu e-mail para redefinir a sua senha</p>
