--- a/CriarConta/CriarConta.html
+++ b/CriarConta/CriarConta.html
@@ -21,11 +21,11 @@
 
             <div class="LadoA">
                 <a href="#">
-                    <button><i class="fa-brands fa-google" style="color: #1BC3EA;"> </i> Entrar com Google</button>
+                    <button class="entrarCom"><i class="fa-brands fa-google" style="color: #1BC3EA;"> </i> Entrar com Google</button>
                 </a>
                 
                 <a href="#">
-                    <button><i class="fa-brands fa-facebook" style="color: #1BC3EA;"> </i> Entrar com Facebook</button>
+                    <button class="entrarCom"><i class="fa-brands fa-facebook" style="color: #1BC3EA;"> </i> Entrar com Facebook</button>
                 </a>
             </div>
 
