--- a/Configuracoes/Tela_configurações.html
+++ b/Configuracoes/Tela_configurações.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <script src="Header.js"></script>
+        <script src="../Principal/Header.js"></script>
     </header>
 
     <main>
