update header botões funcionais

--- a/Configuracoes/Tela_configurações.html
+++ b/Configuracoes/Tela_configurações.html
@@ -38,7 +38,7 @@
     
             <!-- Dropdown do usuário -->
             <div class="dropdown-menu" id="userMenu">
-                <a href="configuracoes.html">Configurações</a>
+                <a href="../Configuracoes/Tela_configurações.html">Configurações</a>
                 <a href="#">Logout</a>
             </div>
     
@@ -55,7 +55,7 @@
             <!-- Menu mobile -->
             <div class="mobile-menu" id="mobileMenu">
                 <a href="#" id="mobileNotifBtn"><i class="fas fa-bell"></i> Notificações</a>
-                <a href="configuracoes.html"><i class="fas fa-cog"></i> Configurações</a>
+                <a href="../Configuracoes/Tela_configurações.html"><i class="fas fa-cog"></i> Configurações</a>
                 <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </div>
         </div>
