--- a/Principal/HeaderFooter.html
+++ b/Principal/HeaderFooter.html
@@ -32,8 +32,8 @@
 
         <!-- Dropdown do usuário -->
         <div class="dropdown-menu" id="userMenu">
-            <a href="configuracoes.html">Configurações</a>
-            <a href="#">Logout</a>
+            <a href="../Configuracoes/Tela_configurações.html">Configurações</a>
+            <a href="../Login/login.html">Logout</a>
         </div>
 
         <!-- Dropdown de notificações -->
@@ -49,8 +49,8 @@
         <!-- Menu mobile -->
         <div class="mobile-menu" id="mobileMenu">
             <a href="#" id="mobileNotifBtn"><i class="fas fa-bell"></i> Notificações</a>
-            <a href="configuracoes.html"><i class="fas fa-cog"></i> Configurações</a>
-            <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <a href="../Configuracoes/Tela_configurações.html"><i class="fas fa-cog"></i> Configurações</a>
+            <a href="../Login/login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </div>
 </header>
