update header footers

--- a/Principal/HeaderFooter.html
+++ b/Principal/HeaderFooter.html
@@ -53,6 +53,7 @@
             <a href="../Login/login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </div>
+    <script src="../Principal/Header.js"></script>
 </header>
 
     <footer class="footer">
@@ -75,6 +76,5 @@
         </div>
     </footer>
 
-    <script src="Header.js"></script>
 </body>
 </html>
