--- a/ProfissionaisDisponiveis/ProfissionaisDisponiveiss.html
+++ b/ProfissionaisDisponiveis/ProfissionaisDisponiveiss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ProfissionaisDisponiveis.css">
+    <link rel="stylesheet" href="ProfissionaisDisponiveiss.css">
     <link rel="stylesheet" href="../Principal/Basico.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>OdontoPro | Profissionais Disponiveis </title>
@@ -57,6 +57,7 @@
             <a href="../Login/login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </div>
+    <script src="../Principal/Header.js"></script>
   </header>
 
   <!-- MAIN -->
@@ -227,6 +228,7 @@
       <p>© odontopro.com.br 2025 - Agende agora sua consulta</p>
     </div>
 </footer>
-    
+
+ <script src="Header.js"></script>
 </body>
 </html>
