--- a/Configuracoes/Tela_configurações.html
+++ b/Configuracoes/Tela_configurações.html
@@ -39,7 +39,7 @@
             <!-- Dropdown do usuário -->
             <div class="dropdown-menu" id="userMenu">
                 <a href="../Configuracoes/Tela_configurações.html">Configurações</a>
-                <a href="#">Logout</a>
+                <a href="../Login/login.html">Logout</a>
             </div>
     
             <!-- Dropdown de notificações -->
@@ -56,10 +56,9 @@
             <div class="mobile-menu" id="mobileMenu">
                 <a href="#" id="mobileNotifBtn"><i class="fas fa-bell"></i> Notificações</a>
                 <a href="../Configuracoes/Tela_configurações.html"><i class="fas fa-cog"></i> Configurações</a>
-                <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                <a href="../Login/login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </div>
         </div>
-
         <script src="../Principal/Header.js"></script>
     </header>
 
