--- a/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
+++ b/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
@@ -57,6 +57,7 @@
             <a href="../Login/login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </div>
+    <script src="../Principal/Header.js"></script>
   </header>
 
   <!-- MAIN -->
@@ -227,6 +228,7 @@
       <p>© odontopro.com.br 2025 - Agende agora sua consulta</p>
     </div>
 </footer>
-    
+
+ <script src="Header.js"></script>
 </body>
 </html>
