--- a/Login/login.html
+++ b/Login/login.html
@@ -39,7 +39,7 @@
                     <input id="manter-logado" type="checkbox">
                     <label for="manter-logado">Lembrar Login</label>
                 </div>
-                <a href="#">Esqueci Senha</a>
+                <a href="../VerificarCodigo/VerificarCodigo.html">Esqueci Senha</a>
             </div>
 
             <div class="outros">
