--- a/VerificarCodigo/VerificarCodigo.html
+++ b/VerificarCodigo/VerificarCodigo.html
@@ -13,7 +13,7 @@
       <div class="logo"><img src="OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo"></div>
       <h2>Verifique seu e-mail</h2>
       <p class="mensagem">
-        Enviamos um link de redefinição para <strong>gabrielgomes@...</strong><br>
+        Enviamos um link de redefinição para <strong>EMAIL</strong><br>
         Digite o código de 5 dígitos mencionado no e-mail
       </p>
 
@@ -24,8 +24,8 @@
         <input type="text" maxlength="1">
         <input type="text" maxlength="1">
       </div>
-
-      <button class="verificar">Verificar Código</button>
+      
+      <button href="../VerificarCodigo/VerificarCodigo.html" class="verificar">Verificar Código</button>
 
       <div class="timer">
         <i class="fa-solid fa-clock"></i>
