--- a/CriarConta/CriarConta.html
+++ b/CriarConta/CriarConta.html
@@ -64,8 +64,9 @@
                         <input type="password" id="senha" name="senha" placeholder="Senha">
                         <span class="erro-msg" id="erro-senha"></span>
                     </div>
-    
-                    <input id="enviar" type="submit" value="Cadastrar Conta">
+                    <a href="../Login/login.html">
+                        <input id="enviar" type="submit" value="Cadastrar Conta">
+                      </a>
                 </form>
             </div>
     
