--- a/NovaSenha/novaSenha.html
+++ b/NovaSenha/novaSenha.html
@@ -10,7 +10,7 @@
   <main class="main">
     <div class="container">
       <div class="Logo">
-        <img class="img_logo" src="Logo moderna cirurgiã dentista azul (2) 1.png" alt="Logo" />
+        <img class="img_logo" src="../OdontoIMG/OdontoLogo1.png" alt="Logo" />
       </div>
 
       <div class="Texto_inicial">
@@ -34,7 +34,9 @@
           <input type="password" id="confirma-senha" name="confirma-senha" />
         </div>
 
-        <button type="submit">Mudar Senha</button>
+        <a href="../Login/login.html">
+          <button type="button">Mudar Senha</button>
+        </a>
       </form>
     </div>
   </main>
