--- a/VerificarCodigo/VerificarCodigo.html
+++ b/VerificarCodigo/VerificarCodigo.html
@@ -10,7 +10,7 @@
 <body>
   <main class="container">
     <div class="card">
-      <div class="logo"><img src="OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo"></div>
+      <div class="logo"><img src="../OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo"></div>
       <h2>Verifique seu e-mail</h2>
       <p class="mensagem">
         Enviamos um link de redefinição para <strong>EMAIL</strong><br>
@@ -25,7 +25,10 @@
         <input type="text" maxlength="1">
       </div>
       
-      <button href="../VerificarCodigo/VerificarCodigo.html" class="verificar">Verificar Código</button>
+      <a href="../NovaSenha/novaSenha.html">
+        <button class="verificar">Verificar Código</button>
+      </a>
+      
 
       <div class="timer">
         <i class="fa-solid fa-clock"></i>
