--- a/VerificarCodigo/VerificarCodigo.html
+++ b/VerificarCodigo/VerificarCodigo.html
@@ -13,7 +13,7 @@
       <div class="logo"><img src="../OdontoIMG/OdontoLogo1.png" alt="OdontoPro Logo" class="logo"></div>
       <h2>Verifique seu e-mail</h2>
       <p class="mensagem">
-        Enviamos um link de redefinição para <strong>EMAIL</strong><br>
+        Enviamos um link de redefinição para <strong id="emailDestino">EMAIL</strong><br>
         Digite o código de 5 dígitos mencionado no e-mail
       </p>
 
@@ -29,12 +29,13 @@
         <button class="verificar">Verificar Código</button>
       </a>
       
-
       <div class="timer">
         <i class="fa-solid fa-clock"></i>
-        <span>00:59</span>
+        <span>01:00</span>
       </div>
     </div>
   </main>
+
+  <script src="VerificarCodigo.js"></script>
 </body>
 </html>
